crates/floxide-macros/tests/ui/type_mismatch.stderr
error[E0277]: the trait bound `(): AssertOutputOfFooMatchesInputOfBar<u32, i32>` is not satisfied
  --> tests/ui/type_mismatch.rs:31:1
   |
31 | / workflow! {
32 | |     struct TestWorkflow {
33 | |         foo: FooNode,
34 | |         bar: BarNode,
...  |
42 | | }
   | |_^ the trait `AssertOutputOfFooMatchesInputOfBar<u32, i32>` is not implemented for `()`
   |
   = help: the trait `AssertOutputOfFooMatchesInputOfBar<u32, i32>` is not implemented for `()`
           but trait `AssertOutputOfFooMatchesInputOfBar<u32, u32>` is implemented for it
   = help: for that trait implementation, expected `u32`, found `i32`
note: required by a bound in `assert_equal_foo_to_bar`
  --> tests/ui/type_mismatch.rs:31:1
   |
31 | / workflow! {
32 | |     struct TestWorkflow {
33 | |         foo: FooNode,
34 | |         bar: BarNode,
...  |
42 | | }
   | |_^ required by this bound in `assert_equal_foo_to_bar`
   = note: this error originates in the macro `workflow` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui/type_mismatch.rs:31:1
   |
31 | / workflow! {
32 | |     struct TestWorkflow {
33 | |         foo: FooNode,
34 | |         bar: BarNode,
...  |
42 | | }
   | | ^
   | | |
   | |_expected `i32`, found `u32`
   |   arguments to this enum variant are incorrect
   |
note: tuple variant defined here
  --> tests/ui/type_mismatch.rs:31:1
   |
31 | / workflow! {
32 | |     struct TestWorkflow {
33 | |         foo: FooNode,
34 | |         bar: BarNode,
...  |
42 | | }
   | |_^
   = note: this error originates in the macro `workflow` (in Nightly builds, run with -Z macro-backtrace for more info)
help: you can convert a `u32` to an `i32` and panic if the converted value doesn't fit
   |
42 | }.try_into().unwrap()
   |  ++++++++++++++++++++
